syntax = "proto3";

package euromil;

// The euromil service definition.
service Euromil {
  // Register a EuroMillions bet
  rpc RegisterEuroMil (RegisterRequest) returns (RegisterReply);
}

// The request message containing the Euromil key and the digital check ID.
message RegisterRequest {
  string key = 1;
  string checkid = 2;
}

// The response message containing the success or failure of the registration.
message RegisterReply {
  string message = 1;
}
